recursion.logo.tree.Tree.scala.error
Compilation error:
Tree:3: error: not found: value step
    current(step)
            ^